# bunkatsu

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
python/bunkatsu/: __init__.py  __init__.pyi
src/: chunk.rs  config.rs  error.rs  lib.rs  py_bindings.rs  registry.rs  traits.rs
src/algorithms/: fixed_size.rs  heading.rs  markdown.rs  mod.rs  paragraph.rs  recursive.rs  sentence.rs  sliding_window.rs
tests/: conftest.py  test_basic.py  test_chunk.py  test_structural.py
